# cloudmeter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  arc42.md  build.gradle  install.sh  settings.gradle
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-rust.yml  ci.yml  codeql.yml  release-smoke.yml  release.yml  scorecard.yml
agent/: build.gradle
agent/src/main/java/io/cloudmeter/agent/: AgentMain.java  CallableAdvice.java  CloudMeterLogger.java  CloudMeterRegistry.java  ContextPropagatingCallable.java  ContextPropagatingRunnable.java  ExecutorAdvice.java  ExecutorInstrumentation.java  ExecutorInterceptor.java  ForkJoinPoolInstrumentation.java  HttpInstrumentation.java  HttpServletAdvice.java  HttpServletInterceptor.java  RouteNormalizer.java  ThreadPoolExecutorInstrumentation.java  ThreadStateCollector.java
agent/src/test/java/io/cloudmeter/agent/: AgentMainTest.java  CallableAdviceTest.java  CloudMeterLoggerTest.java  CloudMeterRegistryTest.java  ContextPropagatingCallableTest.java  ContextPropagatingRunnableTest.java  ExecutorAdviceTest.java  ExecutorInstrumentationTest.java  ExecutorInterceptorTest.java  ForkJoinPoolInstrumentationTest.java  HttpInstrumentationTest.java  HttpServletAdviceTest.java  HttpServletInterceptorTest.java  RouteNormalizerTest.java  ThreadPoolExecutorInstrumentationTest.java  ThreadStateCollectorTest.java
cli/: build.gradle
cli/src/main/java/io/cloudmeter/cli/: AttachCommand.java  CliArgs.java  CloudMeterCli.java  CloudMeterConfig.java  CloudMeterMain.java  JsonProjectionParser.java  ReportCommand.java
cli/src/test/java/io/cloudmeter/cli/: AttachCommandTest.java  CliArgsTest.java  CloudMeterCliTest.java  CloudMeterConfigTest.java  JsonProjectionParserTest.java  ReportCommandTest.java
clients/node/: .eslintrc.json  .gitignore  README.md  package.json
clients/node/scripts/: junit-reporter.mjs
clients/node/src/: cost-projector.js  dashboard-server.js  express.js  fastify.js  index.js  pricing-catalog.js  reporter.js  reporter.test.js  sidecar.js
clients/node/src/__tests__/: cost-projector.test.js  dashboard-server.test.js  express.test.js  fastify.test.js  reporter.test.js
clients/python/: .gitignore  README.md  pyproject.toml  setup.py
clients/python/cloudmeter/: __init__.py  _cost_projector.py  _dashboard_server.py  _pricing_catalog.py  _reporter.py  _sidecar.py  django.py  fastapi.py  flask.py
clients/python/src/cloudmeter_client/: __init__.py  django_ext.py  fastapi_ext.py  flask_ext.py  reporter.py
clients/python/tests/: conftest.py  test_cost_projector.py  test_dashboard_server.py  test_django.py  test_fastapi.py  test_flask.py  test_reporter.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: config.rs  dashboard.rs  layer.rs  lib.rs  model.rs  pricing.rs  projector.rs  store.rs
clients/rust/tests/: integration_test.rs
collector/: build.gradle
collector/src/main/java/io/cloudmeter/collector/: MetricsStore.java  RequestContext.java  RequestContextHolder.java  RequestMetrics.java  RouteStats.java  RouteStatsCalculator.java
collector/src/test/java/io/cloudmeter/collector/: MetricsStoreStressTest.java  MetricsStoreTest.java  RequestContextHolderTest.java  RequestContextTest.java  RequestMetricsTest.java  RouteStatsCalculatorTest.java  RouteStatsTest.java
cost-engine/: build.gradle
cost-engine/src/main/java/io/cloudmeter/costengine/: CloudProvider.java  CostProjector.java  EndpointCostProjection.java  InstanceType.java  LivePricingFetcher.java  PricingCatalog.java  ProjectionConfig.java  ScalePoint.java  WarmupCostSummary.java
cost-engine/src/test/java/io/cloudmeter/costengine/: CostProjectorTest.java  EndpointCostProjectionTest.java  InstanceTypeTest.java  LivePricingFetcherTest.java  PricingCatalogTest.java  ProjectionConfigTest.java  ScalePointTest.java  WarmupCostSummaryTest.java
docs/wiki/: Agent-Configuration.md  Architecture.md  CLI-Usage.md  Contributing.md  Cost-Projection-Model.md  Dashboard.md  Getting-Started.md  Home.md  Python-Node-Clients.md  Rust-Client.md
integration-test/: build.gradle
integration-test/src/test/java/io/cloudmeter/integration/: PipelineIntegrationTest.java
pricing/: cloudmeter-prices.json
reporter/: build.gradle
reporter/src/main/java/io/cloudmeter/reporter/: DashboardServer.java  JsonReporter.java  TerminalReporter.java
reporter/src/main/resources/io/cloudmeter/reporter/: dashboard.html
reporter/src/test/java/io/cloudmeter/reporter/: DashboardServerTest.java  JsonReporterTest.java  TerminalReporterTest.java  WarmupReporterTest.java
scripts/: e2e.sh  measure-overhead.sh  smoke-axum.sh  smoke-node.sh  smoke-python.sh  smoke-rust.sh
sidecar/: build.gradle
sidecar-rs/: Cargo.toml  Makefile  README.md
sidecar-rs/.config/: nextest.toml
sidecar-rs/assets/: dashboard.html
sidecar-rs/src/: config.rs  lib.rs  main.rs  model.rs  pricing.rs  projector.rs  server.rs  store.rs
sidecar-rs/tests/: integration_test.rs
sidecar/src/main/java/io/cloudmeter/sidecar/: IngestServer.java  SidecarArgs.java  SidecarMain.java
sidecar/src/test/java/io/cloudmeter/sidecar/: IngestServerParserTest.java  IngestServerTest.java  SidecarArgsTest.java
smoke-test/: build.gradle
smoke-test-jaxrs/: build.gradle
smoke-test-sb2/: build.gradle
smoke-test-servlet/: build.gradle
smoke-test/src/main/resources/: application.properties
spring-boot-starter/: build.gradle
test-apps/axum/: Cargo.toml
test-apps/axum/src/: main.rs
test-apps/jaxrs/: build.gradle
test-apps/servlet/: build.gradle
test-apps/spring2/: build.gradle
test-apps/spring2/src/main/resources/: application.properties
test-apps/spring3/: build.gradle
(+23 files in other folders)
