[package]
name = "cloudmeter-sidecar"
version = "0.1.0"
edition = "2021"
description = "CloudMeter sidecar — native cost monitoring for Python/Node.js apps"
license = "Apache-2.0"

[[bin]]
name = "cloudmeter-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
