[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmeter"
version = "0.1.0"
description = "Per-endpoint cloud cost monitoring for Python web apps"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
# Zero required dependencies — uses stdlib urllib for everything.
# Framework packages (Flask, FastAPI, Django) are already in the user's env.
dependencies = []

[project.optional-dependencies]
fastapi = ["starlette>=0.20"]
django  = ["django>=3.2"]

[project.urls]
Homepage   = "https://github.com/studymadara/cloudmeter"
Repository = "https://github.com/studymadara/cloudmeter"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudmeter*"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cloudmeter"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except Exception:",             # swallow-all guards are intentional
]
