[package]
name = "cloudmeter-axum-demo"
version = "0.1.0"
edition = "2021"
description = "Axum smoke test app for CloudMeter"

[[bin]]
name = "cloudmeter-axum-demo"
path = "src/main.rs"

[dependencies]
cloudmeter = { path = "../../clients/rust" }
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
serde_json  = "1"
